# Logos

./: CMakeLists.txt  README.md  build.bat  build.sh
Engine/: CMakeLists.txt  build.bat  build.sh
Engine/src/: defines.h  test.c  test.h
Engine/src/core/Application/: Application.c  Application.h
Engine/src/core/Assert/: Asserts.h
Engine/src/core/Log/: Log.c  Log.h
Engine/src/platform/: platform.h  platform_linux.c  platform_win32.c
Sandbox/: CMakeLists.txt  build.bat  build.sh
Sandbox/src/: main.c
